--- a/web/views/layout.jade
+++ b/web/views/layout.jade
@@ -5,13 +5,15 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/jquery-ui-1.10.0.custom.min.css')
     link(rel='stylesheet', href='/stylesheets/ui.jqgrid.css')
-    script(src="/javascripts/jquery/jquery-1.9.0.min.js")
+    script(src="/javascripts/jquery/jquery-1.7.2.min.js")
     script(src="/javascripts/jquery/jquery-ui-1.10.0.custom.min.js")
     script(src="/javascripts/jquery/jquery.chainedSelects.js")
     script(src="/javascripts/jquery/grid.locale-en.js")
     script(src="/javascripts/jquery/ui.multiselect.js")
     script(src="/javascripts/jquery/jquery.jqGrid.min.js")
     script(src="/javascripts/jquery/ajaxfileupload.js")
+    script(src="/javascripts/jquery/jquery.cookie.js")
+    script(src="/javascripts/tree.js")
   body
     #header_wrapper
       #header
