--- a/web/views/layout.jade
+++ b/web/views/layout.jade
@@ -14,6 +14,8 @@ html
     script(src="/javascripts/jquery/ajaxfileupload.js")
     script(src="/javascripts/jquery/jquery.cookie.js")
     script(src="/javascripts/tree.js")
+    script(src="/javascripts/grid.js")
+    script(src="/javascripts/layout.js")
   body
     #header_wrapper
       #header
@@ -24,3 +26,4 @@ html
       #content
         #menu
         #page
+          block content-page
