--- a/web/views/layout.jade
+++ b/web/views/layout.jade
@@ -5,7 +5,8 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/jquery-ui-1.10.0.custom.min.css')
     link(rel='stylesheet', href='/stylesheets/ui.jqgrid.css')
-    script(src="/javascripts/jquery/jquery-1.7.2.min.js")
+    script(src="/javascripts/jquery/jquery-1.9.0.min.js")
+    script(src="http://code.jquery.com/jquery-migrate-1.0.0.js")
     script(src="/javascripts/jquery/jquery-ui-1.10.0.custom.min.js")
     script(src="/javascripts/jquery/jquery.chainedSelects.js")
     script(src="/javascripts/jquery/grid.locale-en.js")
@@ -25,5 +26,7 @@ html
             input#searchbutton(type='submit', size=10, title='Search', value='', name='Search')
       #content
         #menu
+         table#nav_menu
+         #nav_pager
         #page
           block content-page
