--- a/erp/views/process.jade
+++ b/erp/views/process.jade
@@ -92,6 +92,7 @@
 |                    width:700,
 |                    height:'auto',
 |                    reloadAfterSubmit:true,
+|                    editCaption: subcol.caption,
 |                    recreateForm:true,
 |                    savekey:[true,13],
 |                    closeAfterEdit:true,
@@ -147,6 +148,7 @@
 |                    height:'auto',
 |                    reloadAfterSubmit:true,
 |                    recreateForm:true,
+|                    addCaption: subcol.caption,
 |                    savekey:[true,13],
 |                    closeAfterEdit:true,
 |                    closeAfterAdd:true,
@@ -228,6 +230,7 @@
 |                 { 
 |                    width:700,
 |                    height:'auto',
+|                    editCaption: collection.caption,
 |                    reloadAfterSubmit:true,
 |                    recreateForm:true,
 |                    savekey:[true,13],
@@ -283,6 +286,7 @@
 |                    width:700,
 |                    height:'auto',
 |                    reloadAfterSubmit:true,
+|                    addCaption: collection.caption,
 |                    recreateForm:true,
 |                    savekey:[true,13],
 |                    closeAfterEdit:true,
