--- a/erp/public/stylesheets/style.css
+++ b/erp/public/stylesheets/style.css
@@ -85,7 +85,7 @@ body {
 }
 
 #header { 
-     background: url("/images/blpilogo.jpg") no-repeat 0 center transparent; 
+     background: url("/images/bl-logo.png") no-repeat 0 center transparent; 
     background-size: contain;
     height: 67px;
     margin: 0 auto 10px 1%;
