--- a/erp/views/process.jade
+++ b/erp/views/process.jade
@@ -1,6 +1,7 @@
 | <script type='text/javascript'>
 |  $(document).ready(function () {
 |    'use strict';
+|     $(".help-field").tooltip();
 |    function image(cellvalue,options,rowObject){
 |          return "<img src='"+ cellvalue +"' width='80' height='80'></img>";
 |    }
