--- a/erp/views/process.jade
+++ b/erp/views/process.jade
@@ -96,7 +96,7 @@
 |                    editCaption: subcol.caption,
 |                    recreateForm:true,
 |                    savekey:[true,13],
-|                    closeAfterEdit:false,
+|                    closeAfterEdit:true,
 |                    closeAfterAdd:true,
 |                    navkeys:true,
 |                    closeOnEscape:true,
@@ -151,7 +151,7 @@
 |                    recreateForm:true,
 |                    addCaption: subcol.caption,
 |                    savekey:[true,13],
-|                    closeAfterEdit:false,
+|                    closeAfterEdit:true,
 |                    closeAfterAdd:true,
 |                    navkeys:true,
 |                    closeOnEscape:true,
@@ -235,7 +235,7 @@
 |                    reloadAfterSubmit:true,
 |                    recreateForm:true,
 |                    savekey:[true,13],
-|                    closeAfterEdit:false,
+|                    closeAfterEdit:true,
 |                    closeAfterAdd:true,
 |                    navkeys:true,
 |                    closeOnEscape:true,
@@ -290,7 +290,7 @@
 |                    addCaption: collection.caption,
 |                    recreateForm:true,
 |                    savekey:[true,13],
-|                    closeAfterEdit:false,
+|                    closeAfterEdit:true,
 |                    closeAfterAdd:true,
 |                    navkeys:true,
 |                    closeOnEscape:true,
