--- a/erp/views/layouts/menu.jade
+++ b/erp/views/layouts/menu.jade
@@ -5,7 +5,7 @@ script(type='text/javascript')
     'use strict';
     var grid = jQuery("#nav_menu");
     grid.jqGrid({
-      url: "/grid/menu/setting/v00s01",
+      url: "/grid/menu/page/v00s01",
       datatype: "json",
       mtype:'POST',
       sortname: 'index',
